--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,36 +1,74 @@
-<?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".Main">
+    android:layout_height="match_parent">
 
-    <Button
-        android:id="@+id/insMatrix"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="180dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="8dp"
-        android:background="@color/colorPrimary"
-        android:text="@string/insMatrixButt"
-        app:layout_constraintBottom_toTopOf="@+id/frameLayout2"
-        app:layout_constraintEnd_toEndOf="parent"
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="56dp"
+        android:text="Inserisci il numero di\n\t\trighe e colonne!"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <FrameLayout
-        android:id="@+id/frameLayout2"
-        android:layout_width="0dp"
-        android:layout_height="415dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/insMatrix">
+    <TextView
+        android:id="@+id/textRighe"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Righe:"
+        android:textSize="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/text"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="@+id/text"
+        tools:layout_editor_absoluteY="128dp" />
 
-    </FrameLayout>
+    <EditText
+        android:id="@+id/textBRighe"
+        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBaseline_toBaselineOf="@+id/textRighe"
+        app:layout_constraintStart_toEndOf="@+id/fatto"
+        tools:layout_editor_absoluteX="236dp"
+        tools:layout_editor_absoluteY="115dp" />
+
+    <TextView
+        android:id="@+id/textColonne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="@+id/textRighe"
+        app:layout_constraintTop_toBottomOf="@+id/textRighe"
+        android:text="Colonne:"
+        android:textSize="20dp"
+        android:layout_marginTop="20dp"
+        tools:layout_editor_absoluteX="110dp"
+        tools:layout_editor_absoluteY="182dp" />
+
+    <EditText
+        android:id="@+id/textBColonne"
+        android:inputType="number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBaseline_toBaselineOf="@id/textColonne"
+        app:layout_constraintStart_toStartOf="@+id/textBRighe"
+        app:layout_constraintTop_toBottomOf="@+id/textBRighe" />
+
+    <Button
+        android:id="@+id/fatto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="212dp"
+        android:background="@drawable/fatto_button"
+        android:text="Fatto"
+        android:gravity="center"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="200dp"/>
+
 </android.support.constraint.ConstraintLayout>
